2020-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi/Parsetexi.pm: Remove reference
	to line numbers in ParserNonXS.pm.

2020-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	Add @displaymath.
	
	* tp/Texinfo/Common.pm (%block_commands, %raw_commands),
	* tp/Texinfo/XS/parsetexi/command_data.txt:
	Add 'displaymath'.  It is treated like @verbatim by default.

2020-10-15  Gavin Smith  <gavinsmith0123@gmail.com>

	@displaymath and \frac

	* doc/texinfo.tex (@displaymath): Implement.
	* doc/texinfo.tex (\frac): Provide.

2020-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	HTML_MATH, MATHJAX_SCRIPT and MATHJAX_SOURCE
	
	* doc/texinfo.texi (HTML Customization Variables):
	Add HTML_MATH.
	(MathJax Customization Variables): Add MATHJAX_SCRIPT
	and MATHJAX_SOURCE along with guidance for using these.

2020-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Customization Variables for @-Commands):
	Remove @contents and @shortcontents, as it is not meaningful to
	set these from the command line, even if they are viewed as
	settings internally.

2020-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Document JS_WEBLABELS and JS_WEBLABELS_FILE.
	
	* doc/texinfo.texi (HTML Customization Variables): Add
	JS_WEBLABELS and JS_WEBLABELS_FILE.
	* NEWS: Same.

2020-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Manual revisions.
	
	* doc/texinfo.texi (History, Reference Implementation):
	Merge the latter into the former.  Remove reference to
	removed 'util/texi2html' script.
	* TODO: Remove some install-info points that will never be done
	(by install-info).
	* tp/Texinfo/Structuring.pm: Remove reference to removed value.

2020-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Manual revisions.

	* doc/texinfo.texi (Pointer Validation, Invoking texi2any):
	Merge the former into the latter.

2020-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Change warning messages.
	
	* tp/Texinfo/Structuring.pm (nodes_tree): Reword warning messages.
